--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -300,7 +300,7 @@
   .menu-section {
     grid-template-columns: 1fr;
     gap: 2rem;
-    width: 80%; /* changed from 90% */
+    width: 80%;
   }
 
   .heading-divider {
@@ -325,7 +325,7 @@
   }
 
   .menu-card {
-    width: 70%; /* changed from max-width: 350px */
+    width: 70%;
     margin: 0 auto;
   }
 
@@ -356,7 +356,7 @@
   }
 
   .menu-card {
-    width: 80%; /* changed from max-width: 320px */
+    width: 80%;
   }
 
   .menu-img {
